test/ui/tests/lowering/out-of-line-modules/explicit-location-missing-file.lushui
;;; TEST fail check --no-core

@(location "expansion-of-the-void-until-eternity")
module meaningless

use meaningless.contained
